# XJTU-RMV

./: .gitignore
XJTU-RMV-Task01/: CMakeLists.txt  README.md  main.cpp
XJTU-RMV-Task02/: CMakeLists.txt  README.md
XJTU-RMV-Task02/.cache/clangd/index/: main.cpp.3791E65EC75FBADF.idx
XJTU-RMV-Task02/src/: main.cpp
XJTU-RMV-Task03/: CMakeLists.txt  README.md  output.avi
XJTU-RMV-Task03/src/: main.cpp  test.cpp
XJTU-RMV-Task04/: README.md
XJTU-RMV-Task04/XJTU-RMV_WS/src/task/: CMakeLists.txt  package.xml
XJTU-RMV-Task04/XJTU-RMV_WS/src/task/config/: camera_info.yaml  camera_params.yaml
XJTU-RMV-Task04/XJTU-RMV_WS/src/task/launch/: camera_launch.py
XJTU-RMV-Task04/XJTU-RMV_WS/src/task/src/: camera_node.cpp
XJTU-RMV-Task0d00/XJTU-RMV-Task0d00_WS/src/my_camera_node/: CMakeLists.txt  package.xml
XJTU-RMV-Task0d00/XJTU-RMV-Task0d00_WS/src/my_camera_node/config/: camera_info.yaml  camera_params.yaml
XJTU-RMV-Task0d00/XJTU-RMV-Task0d00_WS/src/my_camera_node/launch/: launch.py  multi_source_camera_launch.py
XJTU-RMV-Task0d00/XJTU-RMV-Task0d00_WS/src/my_camera_node/model/: labels.txt  model.onnx
XJTU-RMV-Task0d00/XJTU-RMV-Task0d00_WS/src/my_camera_node/src/: armor_detector_node.cpp  armor_types.hpp  multi_source_camera_node.cpp  number_classifier.cpp  number_classifier.hpp  video_publisher_node.cpp
